fix(fase-1): corrige depends_on com healthchecks no docker-compose
- Adiciona condition: service_healthy nos depends_on
- Garante que MySQL e Redis estejam prontos antes de iniciar app e queue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,10 @@ services:
     networks:
       - cms-network
     depends_on:
-      - mysql
-      - redis
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       - DB_HOST=mysql
       - DB_PORT=3306
@@ -95,8 +97,10 @@ services:
     networks:
       - cms-network
     depends_on:
-      - mysql
-      - redis
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       - DB_HOST=mysql
       - DB_PORT=3306
