fix adicionado front e back

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -6,20 +6,43 @@ server {
 
     charset utf-8;
 
+    # Root routes - Laravel Backend
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
+    # API routes with /api prefix - remove prefix and pass to Laravel
+    location /api {
+        rewrite ^/api(/.*)$ $1 break;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
-    error_page 404 /index.php;
-
+    # PHP handler for Laravel
     location ~ \.php$ {
+        try_files $uri =404;
         fastcgi_pass app:9000;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param REQUEST_URI $request_uri;
+        fastcgi_param QUERY_STRING $query_string;
         include fastcgi_params;
         fastcgi_hide_header X-Powered-By;
+    }
+
+    # Deny access to .htaccess files
+    location ~ /\.ht {
+        deny all;
+    }
+
+    # Common configurations
+    location = /favicon.ico { 
+        access_log off; 
+        log_not_found off; 
+        try_files $uri =204;
+    }
+
+    location = /robots.txt { 
+        access_log off; 
+        log_not_found off; 
     }
 
     location ~ /\.(?!well-known).* {
@@ -31,4 +54,3 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 }
-
