--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,23 +8,27 @@ services:
     ports:
       - "${APP_PORT:-8000}:80"
     volumes:
-      - ./:/var/www/html
+      - ./backend:/var/www/html
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/nginx-backend.conf:/etc/nginx/conf.d/backend.conf
+      - ./docker/nginx/nginx-frontend.conf:/etc/nginx/conf.d/frontend.conf
+      - ./docker/nginx/nginx-common.conf:/etc/nginx/conf.d/common.conf
     networks:
       - cms-network
     depends_on:
       - app
+      - frontend
 
   app:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: ../Dockerfile
     container_name: cms-api-app
     restart: unless-stopped
     working_dir: /var/www/html
     volumes:
-      - ./:/var/www/html
+      - ./backend:/var/www/html
       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - cms-network
@@ -33,17 +37,40 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    env_file:
+      - docker/backend.env
     environment:
       - DB_HOST=mysql
-      - DB_PORT=3306
+      - DB_PORT=${DB_PORT:-3306}
       - DB_DATABASE=${DB_DATABASE:-cms_db}
       - DB_USERNAME=${DB_USERNAME:-cms_user}
       - DB_PASSWORD=${DB_PASSWORD:-cms_password}
       - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - CACHE_DRIVER=redis
-      - SESSION_DRIVER=redis
-      - QUEUE_CONNECTION=redis
+      - REDIS_PORT=${REDIS_PORT:-6379}
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    container_name: cms-api-frontend
+    restart: unless-stopped
+    ports:
+      - "${FRONTEND_PORT:-3000}:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+      - /app/.next
+    networks:
+      - cms-network
+    env_file:
+      - docker/frontend.env
+    environment:
+      - NODE_ENV=development
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
+      - CHOKIDAR_INTERVAL=500
+      - NEXT_TELEMETRY_DISABLED=1
+      - TURBOPACK=1
 
   mysql:
     image: mysql:8.0
@@ -87,13 +114,13 @@ services:
 
   queue:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: ../Dockerfile
     container_name: cms-api-queue
     restart: unless-stopped
     working_dir: /var/www/html
     volumes:
-      - ./:/var/www/html
+      - ./backend:/var/www/html
     networks:
       - cms-network
     depends_on:
@@ -101,14 +128,16 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    env_file:
+      - docker/backend.env
     environment:
       - DB_HOST=mysql
-      - DB_PORT=3306
+      - DB_PORT=${DB_PORT:-3306}
       - DB_DATABASE=${DB_DATABASE:-cms_db}
       - DB_USERNAME=${DB_USERNAME:-cms_user}
       - DB_PASSWORD=${DB_PASSWORD:-cms_password}
       - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - REDIS_PORT=${REDIS_PORT:-6379}
     command: php artisan queue:work --tries=3 --timeout=90
 
 volumes:
